Archive2/96/66c6b0b755644f/output
main.cpp: In member function 'virtual std::basic_streambuf<char>::int_type infix_buffer::overflow(std::basic_streambuf<char>::int_type)':
main.cpp:17:21: error: 'stack' was not declared in this scope
             while (!stack.empty())
                     ^
main.cpp:17:21: note: suggested alternative:
In file included from /usr/local/include/c++/4.8.2/stack:61:0,
                 from main.cpp:3:
/usr/local/include/c++/4.8.2/bits/stl_stack.h:96:11: note:   'std::stack'
     class stack
           ^
main.cpp:40:29: error: 'digit' was not declared in this scope
                 values.push(digit);
                             ^
main.cpp:42:5: warning: no return statement in function returning non-void [-Wreturn-type]
     }
     ^
